--- a/src/main/resources/templates/board/edit.html
+++ b/src/main/resources/templates/board/edit.html
@@ -8,7 +8,7 @@
 <body>
 <header th:insert="common/header.html"></header>
 <div class="container">
-    <form th:action="@{'/post/edit/' + ${post.id}}" method="post">
+    <form action="" method="post" enctype="multipart/form-data" id="editFrm">
         <input type="hidden" name="_method" value="put"/>
         <input type="hidden" name="id" th:value="${post.id}"/>
         <div class="form-group row">
@@ -29,15 +29,31 @@
                 <textarea type="text" name="content" class="form-control" id="inputContent" th:text="${post.content}"></textarea>
             </div>
         </div>
+        <div class="form-group row">
+            <label for="inputFile" class="col-sm-2 col-form-label"><strong>첨부 파일</strong></label>
+            <div class="col-sm-10">
+                <div class="custom-file" id="inputFile">
+                    <input name="file" type="file" class="custom-file-input" id="customFile" accept="image/*;capture=camera">
+                    <label class="custom-file-label" for="customFile"></label>
+                </div>
+            </div>
+        </div>
         <div class="row">
             <div class="col-auto mr-auto"></div>
             <div class="col-auto">
-                <input class="btn btn-primary" type="submit" role="button" value="수정">
+                <input class="btn btn-primary" type="submit" role="button" value="수정" id="btnEdit">
             </div>
         </div>
     </form>
 </div>
 <script src="/webjars/jquery/3.5.1/jquery.min.js"></script>
 <script src="/webjars/bootstrap/5.0.1/js/bootstrap.min.js"></script>
+<script src="/static/js/app/board.js"></script>
+<script th:inline="javascript">
+    $(function (){
+        var filename = [[${post.origFilename}]];
+        $('.custom-file-label').addClass("selected").html('기존 파일 : ' + filename);
+    });
+</script>
 </body>
 </html>
