--- a/src/main/resources/templates/board/post.html
+++ b/src/main/resources/templates/board/post.html
@@ -8,7 +8,7 @@
 <body>
 <header th:insert="common/header.html"></header>
 <div class="container">
-    <form action="/post" method="post" enctype="multipart/form-data">
+    <form action="" method="post" enctype="multipart/form-data" id="saveFrm">
         <div class="form-group row">
             <label for="inputTitle" class="col-sm-2 col-form-label"><strong>제목</strong></label>
             <div class="col-sm-10">
@@ -31,26 +31,21 @@
             <label for="inputFile" class="col-sm-2 col-form-label"><strong>첨부 파일</strong></label>
             <div class="col-sm-10">
                 <div class="custom-file" id="inputFile">
-                    <input name="file" type="file" class="custom-file-input" id="customFile">
-                    <label class="custom-file-label" for="customFile">파일을 선택해 주세요.</label>
+                    <input name="file" type="file" class="custom-file-input" id="customFile" accept="image/*;capture=camera">
+                    <label class="custom-file-label" for="customFile"></label>
                 </div>
             </div>
         </div>
         <div class="row">
             <div class="col-auto mr-auto"></div>
             <div class="col-auto">
-                <input class="btn btn-primary" type="submit" role="button" value="글쓰기">
+                <input class="btn btn-primary" type="submit" role="button" value="글쓰기" id="btnSave">
             </div>
         </div>
     </form>
 </div>
 <script src="/webjars/jquery/3.5.1/jquery.min.js"></script>
 <script src="/webjars/bootstrap/5.0.1/js/bootstrap.min.js"></script>
-<script>
-    $(".custom-file-input").on("change", function() {
-        var fileName = $(this).val().split("\\").pop();
-        $(this).siblings(".custom-file-label").addClass("selected").html(fileName);
-    });
-</script>
+<script src="/static/js/app/board.js"></script>
 </body>
 </html>
